# prompt-library

./: .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
scripts/: build-web.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.psd
src-tauri/src/: commands.rs  db.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/new/: page.tsx
src/app/settings/: page.tsx
src/components/: AppShell.tsx  CategoryChips.tsx  CommandPalette.tsx  EmptyState.tsx  MenuListener.tsx  Modal.tsx  PromptDetail.tsx  PromptList.tsx  QuickAdd.tsx  SearchBar.tsx  Sidebar.tsx  TagPill.tsx
src/lib/: categories.ts  shortcuts.ts  tauri.ts  types.ts
src/styles/: globals.css
