[package]
name = "prompt-library"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
tauri-plugin-window-state = "2.0.0"
uuid = { version = "1.8", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
